<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/splasg_bg"
    tools:context="com.mindiii.jeparlelebassa.LoginActivity">

    <LinearLayout
        android:id="@+id/ly_login_liner"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/_20sdp"
        android:layout_marginTop="@dimen/_10sdp">

        <TextView
            android:id="@+id/tv_login"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textSize="@dimen/_18sdp"
            android:text="@string/login"
            android:textStyle="bold"
            android:gravity="center"
            android:textColor="@android:color/black"
            android:layout_alignParentRight="true"
            android:layout_centerInParent="true"
            android:layout_marginRight="@dimen/_14sdp"/>
        <TextView
            android:layout_width="@dimen/_2sdp"
            android:layout_height="@dimen/_15sdp"
            android:textSize="@dimen/_14sdp"
            android:gravity="center"
            android:background="@android:color/black"
            android:layout_alignParentRight="true"
            android:layout_centerInParent="true"/>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/_100sdp">

        <ImageView
            android:layout_width="@dimen/_100sdp"
            android:layout_height="@dimen/_100sdp"
            android:src="@drawable/logo"
            android:layout_alignParentBottom="true"
            android:layout_centerInParent="true"/>

    </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/_30sdp"
        android:layout_marginTop="@dimen/_30sdp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/userimg"
            android:layout_width="@dimen/_20sdp"
            android:layout_height="@dimen/_20sdp"
            android:src="@drawable/email_icon"
            android:padding="@dimen/_2sdp"
            android:layout_centerInParent="true"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="@dimen/_20sdp"
            android:layout_gravity="center" />

        <EditText
            android:id="@+id/ed_email"
            android:layout_toRightOf="@+id/userimg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_20sdp"
            android:hint="@string/email"
            android:imeOptions="actionNext"
            android:maxLines="1"
            android:layout_gravity="center"
            android:singleLine="true"
            android:textColorHint="@android:color/black"
            android:textSize="@dimen/_18sdp"
            android:layout_centerInParent="true"
            android:background="@null"/>
    </LinearLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/_1sdp"
                android:background="@android:color/darker_gray"
                android:layout_below="@+id/ed_email"
                android:layout_alignParentBottom="true"
                android:layout_marginLeft="@dimen/_60sdp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/_30sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/password_icon"
            android:layout_width="@dimen/_20sdp"
            android:layout_height="@dimen/_20sdp"
            android:src="@drawable/password_icon"
            android:layout_centerInParent="true"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="@dimen/_20sdp"
            android:layout_gravity="center" />

        <EditText
            android:id="@+id/ed_password"
            android:layout_toRightOf="@+id/password_icon"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_20sdp"
            android:hint="@string/password"
            android:imeOptions="actionDone"
            android:maxLines="1"
            android:inputType="textPassword"
            android:singleLine="true"
            android:textColorHint="@android:color/black"
            android:textSize="@dimen/_18sdp"
            android:layout_centerInParent="true"
            android:background="@null"/>

    </RelativeLayout>
        </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/_1sdp"
                android:background="@android:color/darker_gray"
                android:layout_below="@+id/ed_password"
                android:layout_alignParentBottom="true"
                android:layout_marginLeft="@dimen/_60sdp"/>
        </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/_30sdp"
        android:layout_marginTop="@dimen/_30sdp">
        <ImageButton
            android:id="@+id/iv_btn_login"
            android:layout_width="@dimen/_170sdp"
            android:layout_height="@dimen/_35sdp"
            android:layout_centerInParent="true"
            android:background="@drawable/oval_shape"/>
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_centerInParent="true"
            android:src="@drawable/login_icon"
            android:padding="@dimen/_6sdp"/>
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/_70sdp"
        android:orientation="vertical"
        android:weightSum="3">

        <TextView
            android:id="@+id/trouble_in_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_gravity="center"
            android:textSize="@dimen/_16sdp"
            android:layout_marginTop="@dimen/_5sdp"
            android:text="@string/truble_in_login"
            android:textColor="@android:color/black"
            android:layout_weight="1"/>

        <TextView
            android:id="@+id/login_with_facbook"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login_with_facebook"
            android:textSize="@dimen/_18sdp"
            android:textColor="@color/black"
            android:layout_gravity="center"
            android:gravity="center|bottom"
            android:layout_weight="2"
            android:layout_alignParentBottom="true"/>
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/iv_fb_btn"
            android:layout_width="@dimen/_40sdp"
            android:layout_height="@dimen/_40sdp"
            android:src="@drawable/facebook_icon"
            android:layout_centerInParent="true"
            android:layout_marginTop="@dimen/_18sdp"
            android:layout_alignParentTop="true"/>

        <LinearLayout
            android:id="@+id/ly_dont_have_account"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_alignParentBottom="true"
            android:gravity="center"
            android:layout_centerInParent="true"
            android:layout_marginBottom="@dimen/_15sdp">
            <TextView
                android:id="@+id/dont_have_account"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dont_have_account"
                android:textSize="@dimen/_18sdp"
                android:textColor="@color/black"
                android:gravity="center"
                android:layout_alignParentBottom="true"/>

        </LinearLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <android.support.design.widget.CoordinatorLayout
                android:id="@+id/my_snackbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:layout_alignParentBottom="true"
                android:foregroundGravity="bottom">


            </android.support.design.widget.CoordinatorLayout>


        </RelativeLayout>
    </RelativeLayout>


    </LinearLayout>
</LinearLayout>
